# ama-mech-interp

./: .gitignore  README.md  pyproject.toml
docs/: phase_one_analysis.md
src/ama_mech_interp/: cli.py  dataset.py  models.py  phase_one.py  run_spec.py  storage.py  workflow.py
src/ama_mech_interp/analysis/: __init__.py  behavior_summary.py  disagreement.py  drift.py  logit_depth.py  probes.py
src/ama_mech_interp/data/: __init__.py  build_prompt_suite.py  gt_harmbench.py  prompt_schema.py  prompt_suite.py
src/ama_mech_interp/eval/: __init__.py  run_behavior.py
src/ama_mech_interp/extract/: __init__.py  save_activations.py
src/ama_mech_interp/models/: __init__.py  checkpoint_selection.py  load_qwen_adapter.py
tests/: test_cli.py
