[project]
name = "ama-mech-interp"
version = "0.1.0"
description = "Mechanistic interpretability workflows for agentic moral alignment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
inference = [
  "accelerate>=1.10.0",
  "huggingface-hub>=0.33.0",
  "peft>=0.17.0",
  "safetensors>=0.6.0",
  "torch>=2.8.0",
  "transformers>=4.56.0",
]

[project.scripts]
ama-mech-interp = "ama_mech_interp.cli:main"
ama-build-prompt-suite = "ama_mech_interp.data.build_prompt_suite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
